# pulseaudio-modules-droid-1

./: configure.ac
debian/: changelog  control  rules
src/common/: Makefile.am  libdroid-util-24.pc.in  libdroid-util-28.pc.in  libdroid-util-29.pc.in
src/common/include/droid/: conversion.h  droid-config.h  droid-util.h
src/droid/: Makefile.am  droid-sink.c  droid-source.c  module-droid-card-24-symdef.h  module-droid-card-28-symdef.h  module-droid-card-29-symdef.h  module-droid-card.c  module-droid-keepalive-24-symdef.h  module-droid-keepalive-28-symdef.h  module-droid-keepalive-29-symdef.h  module-droid-keepalive.c  module-droid-sink-24-symdef.h  module-droid-sink-28-symdef.h  module-droid-sink-29-symdef.h  module-droid-sink.c  module-droid-source-24-symdef.h  module-droid-source-28-symdef.h  module-droid-source-29-symdef.h  module-droid-source.c
